# SHARKtools_install

./: .gitignore  LICENSE  README.md  create_executable.txt  exceptions.py  install.py  install_from_config.py  main.py  plugins  project.py  pyproject.toml  python_path  setup.py  sharksmhi_packages.ini  sharktools_install.py
install_from_config/: config.yaml  installer.py
previous_versions/: logging.conf  plugins  sharksmhi_packages.yaml
previous_versions/install_from_config/: backup.py
src/sharktools_install/: install_sharktools.py
